# caninana

./: .gitignore  Cargo.toml  README.md  arena_history.md  ladderbots.json
.github/workflows/: pull_request.yml  release.yml
caninana/: Cargo.toml
caninana/src/: bot.rs  main.rs
core/: Cargo.toml
core/src/: command_queue.rs  lib.rs  params.rs  utils.rs
core/src/managers/: army_manager.rs  cache_manager.rs  defense_manager.rs  mod.rs  production_manager.rs  queen_manager.rs  ravager_manager.rs  resource_manager.rs  squad_manager.rs  worker_manager.rs
core/src/units/: mod.rs  overlord_manager.rs  queen_manager.rs  ravager_manager.rs
openings/: Cargo.toml
openings/src/: lib.rs
openings/src/zerg/: hatch17.rs  mod.rs  pool14.rs  pool16.rs  poolfirst.rs
python/: download_replays.py  opponent_analysis.py  opponent_analysis_tag.py
