[package]
name = "caninana"
version = "0.6.1"
edition = "2021"
authors = ["Raoni Campos"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caninana-core = { path = "../core" }
caninana-openings = { path = "../openings" }
rust-sc2 = {version = "1.1", features = ["enemies_cache"] }
clap = "2.34"

rand = "0.8"

log = "0.4"
env_logger = "0.9"

[[bin]]
name = "Caninana"
path = "src/main.rs"