[package]
name = "caninana-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-sc2 = { git = "https://github.com/UltraMachine/rust-sc2.git", features = ["enemies_cache"] }
rand = "0.8"
log = "0.4"
itertools = "0.10"