[package]
name = "caninana-openings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caninana-core = { path = "../core" }
rust-sc2 = { git = "https://github.com/UltraMachine/rust-sc2.git", rev="5bcde2d" }